# smrzr

./: README.md  pyproject.toml
.github/workflows/: test.yml
smrzr/: cli.py
tests/: test_smrzr.py
