[project]
name = "smrzr"
version = "0.1"
description = "Summarizes a web page using an LLM"
readme = "README.md"
authors = [{name = "Gordon Weakliem"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click",
    "beautifulsoup4",
    "anthropic",
    "requests"
]

[project.urls]
Homepage = "https://github.com/gweakliem/smrzr"
Changelog = "https://github.com/gweakliem/smrzr/releases"
Issues = "https://github.com/gweakliem/smrzr/issues"
CI = "https://github.com/gweakliem/smrzr/actions"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0"
]

[project.scripts]
smrzr = "smrzr.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"